# wiki-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: nightly.yml  probe-youtube.yml
.keepalive/: last-run
agents/: _bootstrap.py  classifier.py  cleanup.py  curator.py  daily_brief.py  ingester.py  nightly.py  rebuild_index.py  transcript_cleanup.py
docs/: README.md  current.md  pipeline-enhancement-spec.md
docs/features/: _template.md  brief-llm-decoupling.md  brief-prompt-improvements.md  curator-v2.md  demo-repo.md  experiment-table-mobile.md  keepalive-schedule.md  list-thumbnails.md  map-url-sharing.md  md-images.md  sns-fetchers.md
launchd/: com.aejin.designwiki.nightly.plist.template  install.sh  uninstall.sh
lib/: claude.py  github_inbox.py  llm.py  paths.py  user_caption.py  validate.py  wiki_io.py
lib/fetchers/: __init__.py  base.py  generic.py  instagram.py  x.py  youtube.py
prompts/: classifier.md  curator.md  daily_brief.md  transcript_cleanup.md
scripts/: ping_gemini.py  retry.py
tests/: test_classifier_guard.py  test_curator.py  test_daily_brief_decoupled.py  test_daily_brief_empty.py  test_ingester_status.py  test_retry_by_source.py  test_transcript_cleanup.py  test_url_hash.py  test_user_caption.py
tests/fetchers/: test_instagram.py  test_x.py  test_youtube.py
