[project]
name = "design-wiki-agent"
version = "0.1.0"
description = "AI 디자인 개인 위키·브리핑 에이전트"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "aejin" }]

dependencies = [
    # Gemini API
    "google-genai>=1.0.0",

    # 설정·프론트매터
    "pyyaml>=6.0.2",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.1",

    # 본문 추출
    "readability-lxml>=0.8.1",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.0",

    # YouTube
    "yt-dlp>=2024.10.0",

    # URL 정규화·해시
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "agents"]
